# JPVocabBuilder

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js  tailwind.config.js  tsconfig.json
src/rust/: char_ranges.rs  lib.rs  main.rs  scoring.rs  text_filter.rs
src/svelte/: Analysis.svelte  App.svelte  Dropzone.svelte  Progressbar.svelte  main.ts
